--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "bespoke-scale": "~0.2.0",
     "bespoke-hash": "~0.1.0",
     "bespoke-state": "~0.2.0",
-    "prism": "gh-pages"
+    "prism": "gh-pages",
+    "bespoke-secondary": "~0.2.0"
   }
 }
